2008-07-23  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * ssh/Makefile.am: Include socket libraries.  Patch from Jeff Cai.
    Fixes bug #544267
    * libseahorse/seahorse-dns-sd.c: Fix empty struct.
    Patch from Jeff Cai.  Fixes bug #544266
    * libseahorse/seahorse-prefs.c: Fix undeclared variable.  
    Patch from Jeff Cai.  Fixes bug #544262

2008-07-22  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-ldap-source.c: Don't use deprecated LDAP functions.
	Patch by Adam Schreiber. Fixes bug #514618
	
2008-07-22  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-progress.c: Don't add a multi-operation
	to itself. Fixes bug #510992
	
2008-07-21  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number.

=== seahorse 2.23.5 ===

2008-07-21  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* NEWS:
	* README: Release 2.23.5

2008-07-20  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-widget.c: Fix memory leak.

2008-07-20  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-key-manager.glade:
    * src/seahorse-keyserver-results.glade:
    * libseahorse/seahorse-gconf.h:
    * libseahorse/seahorse-widget.c: Save and load window sizes from gconf.
    Fixes bug #510004

2008-07-19  Stef Walter  <stef@memberwebs.com>

	* daemon/seahorse-service.c:
	* gkr/seahorse-gkeyring-source.c:
	* libseahorse/seahorse-source.c:
	* libseahorse/seahorse-source.h:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* pgp/seahorse-gpgmex-op.c:
	* pgp/seahorse-pgp-key-properties.c:
	* src/seahorse-key-manager-store.c:
	* ssh/seahorse-ssh-key-properties.c:
	* ssh/seahrose-ssh-operation.c:
	* ssh/seahorse-ssh-source.c:
	* ssh/seahorse-ssh-source.h: Remove the exporting of secret keys from 
	the SeahorseSource interface, and push this into the modules.
	
2008-07-18  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkeyring-item.c:
	* gkr/seahorse-gkeyring-item.h: