@@ -1,3 +1,10 @@
+2008-07-25  Stef Walter  <stef@memberwebs.com>
+
+	* ssh/seahorse-algo.c:
+	* ssh/seahorse-algo.h:
+	* ssh/seahorse-ssh-key-data.c: Use base64 encoding functions
+	in GLib rather than including our own.
+	
 2008-07-23  Adam Schreiber  <sadam@clemson.edu>
 
     * configure.in:
